# documentArchive

./: .gitignore  .project  .texlipse  README.md  Readme.md  config.yaml  cookbook.conf  cookbook.rake  diSimplexTheory.tex  diSimplexTheoryOld.tex  usingDiSimplexTheory.tex
.gitignore.d/: font-gitignore  jedit-gitignore  latex-gitignore  llvm-gitignore  scala-gitignore
buildTool/: LICENSE  Readme.md  diSimp  diSimp-install  diSimpLaTeX  mtx-diSimp-.lua  mtx-diSimp-help.lua  mtx-diSimp-install.lua  setup
context/: .gitignore  lakefile  lmsfile
cookbook/: Readme.md  cookbook.conf  cookbook.rake
diSimplexConTeXt/: .gitignore  Abstract.md  lmsfile  lmsfileInfo
llvm/: Readme.md
llvm/diSimplexEngine/: CMakeLists.txt  Doxyfile.in
llvm/diSimplexEngine/lib/: CMakeLists.txt  diSiTT.c
llvm/diSimplexEngine/lib/diSimplexEngine/: diSimplex.cpp  diSimplex.h  diSimplexAllocator.h  diSimplexAllocatorInlines.h  diSimplexInlines.h  diSitt.cpp  diSitt.h  diSittInlines.h  diStructure.cpp  diStructure.h  diStructureAllocator.cpp  diStructureAllocator.h  diStructureAllocatorInlines.h  diStructureInlines.h
llvm/diSimplexEngine/tests/: CMakeLists.txt  aTest.cpp  diSimplexAllocatorIteratorTests.cpp  diSimplexAllocatorTests.cpp  diSimplexImplTests.cpp  diSimplexTests.cpp  diSittImplTests.cpp  diSittTests.cpp  diStructureImplTests.cpp  diStructureTests.cpp  runTests.cpp
lua/: disimplexengine-0.1-1.rockspec  test.lua
scala/: .classpath  .project  Readme.md  build.sbt
tex/: .project  .texlipse  cardinals.tex  diSimplexEngine.tex  diSimplexEnginePL.tex  diSimplexTheory.tex  (+5 more)
(+190 files in other folders)
